--- a/src/app/status-panel/status-panel.component.less
+++ b/src/app/status-panel/status-panel.component.less
@@ -1,3 +1,17 @@
+@import (reference) "../../styles.less";
+
 .statusPanelContainer {
   margin: 4px;
+}
+
+.health > .progress-bar > span {
+  background-color: var(--healthColor);
+}
+
+.stamina > .progress-bar > span {
+  background-color: var(--staminaColor);
+}
+
+.focus > .progress-bar > span {
+  background-color: var(--focusColor);
 }
