--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,12 @@
+<mat-toolbar>
+  <app-header-panel></app-header-panel>
+</mat-toolbar>
 <mat-sidenav-container class="mainContainer" >
   <mat-sidenav opened mode="side">
     <app-status-panel></app-status-panel>
   </mat-sidenav>
   <mat-sidenav opened mode="side" position="end">Right sidebar</mat-sidenav>
   <mat-tab-group animationDuration="0ms">
-    <mat-tab label="First"> Content 1 </mat-tab>
-    <mat-tab label="Second"> Content 2 </mat-tab>
-    <mat-tab label="Third"> Content 3 </mat-tab>
+    <mat-tab label="Actions"><app-actions-panel></app-actions-panel></mat-tab>
   </mat-tab-group>
 </mat-sidenav-container>
