--- a/src/styles.less
+++ b/src/styles.less
@@ -1,3 +1,30 @@
+:root {
+  --healthColor: red;
+  --progressBackgroundColor: #efefef;
+  --staminaColor: lightgreen;
+  --focusColor: lightblue;
+  /*
+  --bodyText: black;
+  --bodyBackground: #C4E9CC; //#efefef;
+  --panelBackground: #e9f7ec; //#fcfcfc;
+  --panelBorder: #a4c9aC; //#121212;
+  --tableDividerColor: #a4c9aC;
+  --itemSlotColor: rgb(252, 252, 239);
+  --itemSlotHighlight: #d8deff;
+  --storeButtonColor: #fdfffc;
+  --storeButtonDisabledColor: #555555;
+  --nutritionColor: yellow;
+  --buttonColor: #fdfffc;
+  --buttonBorder: #a4c9aC;
+  --dialogBackground: #333333;
+  --disabledText: #555555;
+  --textHighlight: green;
+  --buttonHighlightBg: gold;
+  --disabledActivity: white;
+  --lifeEffectColor: #00aa08;
+  */
+}
+
 html, body { height: 100%; }
 
 body {
@@ -11,3 +38,60 @@ body {
   user-select: none;
 }
 
+.progress-bar {
+  vertical-align: -0.3em;
+}
+
+.progress-bar {
+  overflow: hidden;
+  background-color: var(--progressBackgroundColor);
+  border-radius: 10px;
+  border: 1px solid #555;
+
+  width: 130px;
+  min-height: 8px;
+  height: 30px;
+  height: fit-content;
+  position: relative;
+
+  writing-mode: horizontal-tb !important;
+  display: inline-block;
+  box-sizing: border-box;
+
+  z-index: 0;
+
+  text-align: center;
+}
+
+.progress-bar::after {
+  color: white;
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(
+        90deg,
+        rgba(0,0,0,0)    0%,
+        rgba(0,0,0,0.4) 40%,
+        rgba(0,0,0,0.4) 60%,
+        rgba(0,0,0,0)  100%);
+}
+
+.progress-bar[value]::after {
+  content: attr(value);
+}
+
+.progress-bar[max]::after {
+  content: attr(value) "/" attr(max);
+}
+
+.progress-bar > span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+
+  background-color: #0075ff;
+
+  display: block;
+  height: 100%;
+}
