--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,5 @@
     <app-status-panel></app-status-panel>
   </mat-sidenav>
   <mat-sidenav opened mode="side" position="end">Right sidebar</mat-sidenav>
-  <mat-tab-group animationDuration="0ms">
-    <mat-tab label="Actions"><app-actions-panel></app-actions-panel></mat-tab>
-  </mat-tab-group>
+  <app-main-panel></app-main-panel>
 </mat-sidenav-container>
