--- a/src/app/status-panel/status-panel.component.html
+++ b/src/app/status-panel/status-panel.component.html
@@ -1,19 +1,36 @@
 <div class="statusPanelContainer">
-  <ng-container *ngFor="let status of characterService.status | keyvalue: originalOrder" >
-    <div class="{{status.key}}">
-      <div>{{status.key | camelToTitle}}</div>
-      <div class="progress-bar"
-        [attr.value]="status.value.value| number:'1.0-1'"
-        [attr.max]="status.value.max | number:'1.0-1'">
-        <span [style.width.%]="100 * status.value.value / status.value.max"></span>
-      </div>
-    </div>
-  </ng-container>
-
-  <ng-container *ngFor="let things of inventoryService.things | keyvalue: originalOrder" >
+  <mat-expansion-panel expanded="true" togglePosition="before">
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        Status
+      </mat-panel-title>
+    </mat-expansion-panel-header>
     <div>
-      <span>{{things.key | camelToTitle}}: </span>
-      <span>{{things.value.value| number:'1.0-1'}}/{{things.value.max | number:'1.0-1'}}</span>
+      <ng-container *ngFor="let status of characterService.status | keyvalue: originalOrder" >
+        <div class="{{status.key}}"  matTooltip="{{characterService.statusFieldDescriptions[status.key]}}">
+          <div>{{status.key | camelToTitle}}</div>
+          <div class="progress-bar"
+            [attr.value]="status.value.value| number:'1.0-1'"
+            [attr.max]="status.value.max | number:'1.0-1'">
+            <span [style.width.%]="100 * status.value.value / status.value.max"></span>
+          </div>
+        </div>
+      </ng-container>
     </div>
-  </ng-container>
+  </mat-expansion-panel>
+  <mat-expansion-panel expanded="true" togglePosition="before">
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        Belongings
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <div>
+      <ng-container *ngFor="let thing of inventoryService.things | keyvalue: originalOrder" >
+        <div matTooltip="{{inventoryService.thingsFieldDescriptions[thing.key]}}">
+          <span>{{thing.key | camelToTitle}}: </span>
+          <span>{{thing.value.value| number:'1.0-1'}}/{{thing.value.max | number:'1.0-1'}}</span>
+        </div>
+      </ng-container>
+    </div>
+  </mat-expansion-panel>
 </div>
