--- a/src/styles.less
+++ b/src/styles.less
@@ -1,3 +1,4 @@
+
 :root {
   --healthColor: red;
   --progressBackgroundColor: #efefef;
@@ -94,4 +95,24 @@ body {
 
   display: block;
   height: 100%;
+}
+
+.mat-tooltip {
+  font-size: 14px !important;
+  white-space: pre-line;
+  z-index: 100;
+}
+
+.buttonGrid {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 10px;
+  justify-content: left;
+  gap: 10px;
+  overflow-anchor: none;
+}
+
+.iconButton {
+  border: 1px solid;
+  border-radius: 3px;
 }
